# AI-Math-Solver

./: README.md  config.py  main.py  pyproject.toml
Functions/: alpha_vantage_data.py  call_function.py  stop_response.py  websearch_data.py  websearch_results.py
