[project]
name = "ai-math-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alpha-vantage>=3.0.0",
    "beautifulsoup4>=4.14.3",
    "exa-py>=2.13.0",
    "firecrawl>=4.28.0",
    "google-genai==1.12.1",
    "pandas>=2.3.3",
    "python-dotenv==1.1.0",
    "serpapi>=1.0.2",
    "vantage-python>=0.5.0",
]
